--- a/brewer/pom.xml
+++ b/brewer/pom.xml
@@ -19,6 +19,7 @@
   	<maven-compiler-plugin.version>3.2</maven-compiler-plugin.version>
   	
   	<spring-framework.version>4.3.0.RELEASE</spring-framework.version>
+  	<thymeleaf.version>3.0.0.RELEASE</thymeleaf.version>
   	<servlet.version>3.1.0</servlet.version>
   </properties>
   
@@ -54,6 +55,19 @@
   		<groupId>org.springframework</groupId>
   		<artifactId>spring-webmvc</artifactId>
   	</dependency>
+  	
+  	<!-- Thymeleaf -->
+	<dependency>
+	    <groupId>org.thymeleaf</groupId>
+	    <artifactId>thymeleaf</artifactId>
+	    <version>${thymeleaf.version}</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>org.thymeleaf</groupId>
+	    <artifactId>thymeleaf-spring4</artifactId>
+	    <version>${thymeleaf.version}</version>
+	</dependency>
   	
   	<!-- Servlet API -->
   	<dependency>
