--- a/brewer/pom.xml
+++ b/brewer/pom.xml
@@ -23,6 +23,7 @@
   	<thymeleaf.version>3.0.0.RELEASE</thymeleaf.version>
   	<servlet.version>3.1.0</servlet.version>
   	<hibernate-validator.version>5.2.4.Final</hibernate-validator.version>
+  	<thymeleaf-layout-dialect.version>2.0.0</thymeleaf-layout-dialect.version>
   </properties>
   
   <build>
@@ -69,6 +70,12 @@
 	    <groupId>org.thymeleaf</groupId>
 	    <artifactId>thymeleaf-spring4</artifactId>
 	    <version>${thymeleaf.version}</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>nz.net.ultraq.thymeleaf</groupId>
+	    <artifactId>thymeleaf-layout-dialect</artifactId>
+	    <version>${thymeleaf-layout-dialect.version}</version>
 	</dependency>
   	
   	<!-- Servlet API -->
