--- a/brewer/pom.xml
+++ b/brewer/pom.xml
@@ -58,6 +58,9 @@
 		<!-- Guava -->
 		<guava.version>19.0</guava.version>
 		
+		<!-- Apache Bean Utils -->
+		<commons-beanutils.version>1.9.2</commons-beanutils.version>
+		
 	</properties>
 
 	<build>
@@ -235,6 +238,12 @@
 		<dependency>
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-context-support</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>${commons-beanutils.version}</version>
 		</dependency>
 	
 	</dependencies>
