--- a/brewer/pom.xml
+++ b/brewer/pom.xml
@@ -61,6 +61,9 @@
 		<!-- Apache Bean Utils -->
 		<commons-beanutils.version>1.9.2</commons-beanutils.version>
 		
+		<!-- Spring Security -->
+		<spring-security-web.version>4.1.1.RELEASE</spring-security-web.version>
+		
 	</properties>
 
 	<build>
@@ -240,11 +243,18 @@
 		    <artifactId>spring-context-support</artifactId>
 		</dependency>
 		
+		<!-- Apache Bean Utils -->
 		<dependency>
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
 			<version>${commons-beanutils.version}</version>
 		</dependency>
 	
+		<!-- Spring Security -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${spring-security-web.version}</version>
+		</dependency>
 	</dependencies>
 </project>
