--- a/brewer/pom.xml
+++ b/brewer/pom.xml
@@ -62,7 +62,7 @@
 		<commons-beanutils.version>1.9.2</commons-beanutils.version>
 		
 		<!-- Spring Security -->
-		<spring-security-web.version>4.1.1.RELEASE</spring-security-web.version>
+		<spring-security.version>4.1.1.RELEASE</spring-security.version>
 		
 	</properties>
 
@@ -254,7 +254,13 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
-			<version>${spring-security-web.version}</version>
+			<version>${spring-security.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${spring-security.version}</version>
 		</dependency>
 	</dependencies>
 </project>
