--- a/brewer/pom.xml
+++ b/brewer/pom.xml
@@ -64,6 +64,9 @@
 		<!-- Spring Security -->
 		<spring-security.version>4.1.1.RELEASE</spring-security.version>
 		
+		<!-- Thymeleaf - Extras Spring Security -->
+		<thymeleaf-extras-springsecurity.version>3.0.0.RELEASE</thymeleaf-extras-springsecurity.version>
+		
 	</properties>
 
 	<build>
@@ -261,6 +264,14 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
 			<version>${spring-security.version}</version>
+		</dependency>
+		
+		<!-- Thymeleaf - Extras Spring Security -->
+		<dependency>
+		    <groupId>org.thymeleaf.extras</groupId>
+		    <artifactId>thymeleaf-extras-springsecurity4</artifactId>
+		    <version>${thymeleaf-extras-springsecurity.version}</version>
+		    <scope>compile</scope>
 		</dependency>
 	</dependencies>
 </project>
