--- a/brewer/src/main/webapp/WEB-INF/web.xml
+++ b/brewer/src/main/webapp/WEB-INF/web.xml
@@ -7,5 +7,9 @@
 		<session-timeout>15</session-timeout>
 	</session-config>
 	
+	<error-page>
+		<error-code>404</error-code>
+		<location>/404</location>
+	</error-page>
 </web-app>
 
