--- a/brewer/src/main/resources/env/mail-homolog.properties
+++ b/brewer/src/main/resources/env/mail-homolog.properties
@@ -1,2 +1,2 @@
-email.username=homologacao
-password=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
+email.username=apikey
+password=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
