--- a/brewer/src/main/webapp/WEB-INF/web.xml
+++ b/brewer/src/main/webapp/WEB-INF/web.xml
@@ -15,5 +15,18 @@
 		<error-code>500</error-code>
 		<location>/500</location>
 	</error-page>
+
+	<filter>
+		<filter-name>charsetFilter</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>charsetFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
 
