--- a/brewer/src/main/webapp/WEB-INF/web.xml
+++ b/brewer/src/main/webapp/WEB-INF/web.xml
@@ -19,6 +19,7 @@
 	<filter>
 		<filter-name>charsetFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<async-supported>true</async-supported>
 		<init-param>
 			<param-name>encoding</param-name>
 			<param-value>UTF-8</param-value>
@@ -27,6 +28,7 @@
 	<filter-mapping>
 		<filter-name>charsetFilter</filter-name>
 		<url-pattern>/*</url-pattern>
+		<dispatcher>ASYNC</dispatcher>
 	</filter-mapping>
 </web-app>
 
