--- a/brewer/pom.xml
+++ b/brewer/pom.xml
@@ -72,9 +72,13 @@
 		
 		<!-- Java Mail -->
 		<javax.mail.version>1.5.6</javax.mail.version>
+		
+		<!-- AWS SDK S3 -->
+		<aws-java-sdk-s3.version>1.10.77</aws-java-sdk-s3.version>
 	</properties>
 
 	<build>
+	<finalName>${artifactId}</finalName>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -292,6 +296,14 @@
 			<groupId>com.sun.mail</groupId>
 			<artifactId>javax.mail</artifactId>
 			<version>${javax.mail.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		
+		<!-- AWS SDK S3 -->
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-s3</artifactId>
+			<version>${aws-java-sdk-s3.version}</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
