--- a/brewer/src/main/resources/env/mail-homolog.properties
+++ b/brewer/src/main/resources/env/mail-homolog.properties
@@ -1,2 +1,2 @@
-email.username=apikey
-password=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
+SENDGRID_USERNAME=apikey
+SENDGRID_PASSWORD=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
