--- a/brewer/src/main/resources/application.properties
+++ b/brewer/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+spring.datasource.url=jdbc:mysql://localhost/brewer?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
+
 spring.mvc.locale-resolver=fixed
 spring.mvc.locale=pt_BR
 
