--- a/brewer/src/main/resources/application.properties
+++ b/brewer/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.thymeleaf.mode=HTML
 
 brewer.mail.username=apikey-prod
 brewer.mail.password=fakepass-prod
+
+brewer.foto-storage-local.url-base=http://localhost:8080/fotos/
