--- a/brewer/src/main/resources/application.properties
+++ b/brewer/src/main/resources/application.properties
@@ -11,3 +11,4 @@ brewer.mail.username=apikey-prod
 brewer.mail.password=fakepass-prod
 
 brewer.foto-storage-local.url-base=http://localhost:8080/fotos/
+brewer.foto-storage-local.local=${user.home}/.brewerFotos
